# vector

./: Cargo.toml  build.rs
cmd/vector/: Cargo.toml
cmd/vector-bin/: Cargo.toml
cmd/vector-bin/src/: main.rs
cmd/vector/src/: main.rs
config/: vector.toml
extensions/topsql/: Cargo.toml  build.rs
extensions/topsql/src/: config.rs  controller.rs  lib.rs
extensions/topsql/src/topology/: mod.rs
extensions/topsql/src/topology/fetch/: mod.rs  models.rs  pd.rs  store.rs  tidb.rs  utils.rs
extensions/topsql/src/topology/fetch/mock/: pd.rs  store.rs
extensions/topsql/src/upstream/: mod.rs  parser.rs  tls_proxy.rs  utils.rs
extensions/topsql/src/upstream/tidb/: mod.rs  parser.rs
extensions/topsql/src/upstream/tikv/: mock_upstream.rs  mod.rs  parser.rs
extensions/vm_import/: Cargo.toml
extensions/vm_import/src/: lib.rs
lib/value/: Cargo.toml
lib/vector-core/: Cargo.toml
lib/vrl/compiler/: Cargo.toml
proto/tidb/: resource_usage_agent.proto  topsql_agent.proto
proto/topsql/: resource_tag.proto  tidb.proto
scripts/: sync-bin-features.sh
scripts/cross/: bootstrap-rhel.sh  x86_64-unknown-linux-gnu.dockerfile
src/: app.rs  lib.rs
src/internal_events/: mod.rs  topsql.rs  topsql_pubsub.rs
src/sinks/: aws_s3_upload_file.rs  mod.rs  vm_import.rs
src/sinks/gcp/: chronicle_unstructured.rs  pubsub.rs  stackdriver_logs.rs
src/sinks/gcs_common/: config.rs
src/sinks/vm_import/: mod.rs
src/sources/: filename.rs  mod.rs
src/sources/kubernetes_logs/: mod.rs
src/sources/tidb_topsql/: mod.rs
src/sources/topsql/: config.rs  controller.rs  mod.rs
src/sources/topsql/topology/fetch/: mod.rs  pd.rs  store.rs  tidb.rs  utils.rs
src/sources/topsql/topology/fetch/mock/: mod.rs
src/sources/topsql/upstream/: mod.rs  parser.rs  tls_proxy.rs  utils.rs
src/sources/topsql/upstream/tidb/: mod.rs  parser.rs
src/sources/topsql/upstream/tikv/: mock_upstream.rs  mod.rs  parser.rs
src/sources/topsql_pubsub/: config.rs  consts.rs  controller.rs  mod.rs  parser.rs  proto.rs  shutdown.rs  topology.rs  utils.rs
src/sources/topsql_pubsub/source/: instance.rs  mod.rs  parser.rs
src/sources/topsql_pubsub/source/tidb/: mod.rs  parser.rs  proto.rs
src/sources/topsql_pubsub/source/tikv/: mod.rs  parser.rs  proto.rs
src/sources/topsql_pubsub/topology/: mod.rs
src/sources/topsql_pubsub/topology/fetch/: mod.rs  pd.rs  store.rs  tidb.rs
src/sources/topsql_pubsub/upstream/: mod.rs  parser.rs  tls_proxy.rs
src/sources/topsql_pubsub/upstream/tidb/: mock_upstream.rs  mod.rs  parser.rs  proto.rs
src/sources/topsql_pubsub/upstream/tikv/: mock_upstream.rs  mod.rs  parser.rs  proto.rs
src/tls/: mod.rs  settings.rs
website/content/en/highlights/: 2022-06-10-vrl-vm-runtime-removal.md
