[package]
name = "vector-bin"
version = "0.24.0"
authors = ["Vector Contributors <vector@datadoghq.com>"]
edition = "2021"
description = "A lightweight and ultra-fast tool for building observability pipelines"
homepage = "https://vector.dev"
license = "MPL-2.0"
readme = "README.md"
publish = false
default-run = "vector"
autobenches = false # our benchmarks are not runnable on their own either way
rust-version = "1.62.0"

[[bin]]
name = "vector"
path = "src/main.rs"

[features]
# Features are synchronized with the main Cargo.toml
# To update it, please run scripts/sync-bin-features.sh
default = ["vector/default"]
default-cmake = ["vector/default-cmake"]
default-msvc = ["vector/default-msvc"]
default-musl = ["vector/default-musl"]
default-no-api-client = ["vector/default-no-api-client"]
default-no-vrl-cli = ["vector/default-no-vrl-cli"]
tokio-console = ["vector/tokio-console"]
all-logs = ["vector/all-logs"]
all-metrics = ["vector/all-metrics"]
target-aarch64-unknown-linux-gnu = ["vector/target-aarch64-unknown-linux-gnu"]
target-aarch64-unknown-linux-musl = ["vector/target-aarch64-unknown-linux-musl"]
target-armv7-unknown-linux-gnueabihf = ["vector/target-armv7-unknown-linux-gnueabihf"]
target-armv7-unknown-linux-musleabihf = ["vector/target-armv7-unknown-linux-musleabihf"]
target-x86_64-unknown-linux-gnu = ["vector/target-x86_64-unknown-linux-gnu"]
target-x86_64-unknown-linux-musl = ["vector/target-x86_64-unknown-linux-musl"]
target-powerpc64le-unknown-linux-gnu = ["vector/target-powerpc64le-unknown-linux-gnu"]
target-powerpc-unknown-linux-gnu = ["vector/target-powerpc-unknown-linux-gnu"]
unix = ["vector/unix"]
kubernetes = ["vector/kubernetes"]
docker = ["vector/docker"]
api = ["vector/api"]
api-client = ["vector/api-client"]
aws-core = ["vector/aws-core"]
protobuf-build = ["vector/protobuf-build"]
gcp = ["vector/gcp"]
opentelemetry = ["vector/opentelemetry"]
enrichment-tables = ["vector/enrichment-tables"]
enrichment-tables-file = ["vector/enrichment-tables-file"]
enrichment-tables-geoip = ["vector/enrichment-tables-geoip"]
sources = ["vector/sources"]
sources-logs = ["vector/sources-logs"]
sources-metrics = ["vector/sources-metrics"]
sources-apache_metrics = ["vector/sources-apache_metrics"]
sources-aws_ecs_metrics = ["vector/sources-aws_ecs_metrics"]
sources-aws_kinesis_firehose = ["vector/sources-aws_kinesis_firehose"]
sources-aws_s3 = ["vector/sources-aws_s3"]
sources-aws_sqs = ["vector/sources-aws_sqs"]
sources-datadog_agent = ["vector/sources-datadog_agent"]
sources-demo_logs = ["vector/sources-demo_logs"]
sources-dnstap = ["vector/sources-dnstap"]
sources-docker_logs = ["vector/sources-docker_logs"]
sources-eventstoredb_metrics = ["vector/sources-eventstoredb_metrics"]
sources-exec = ["vector/sources-exec"]
sources-file = ["vector/sources-file"]
sources-fluent = ["vector/sources-fluent"]
sources-gcp_pubsub = ["vector/sources-gcp_pubsub"]
sources-heroku_logs = ["vector/sources-heroku_logs"]
sources-host_metrics = ["vector/sources-host_metrics"]
sources-http = ["vector/sources-http"]
sources-internal_logs = ["vector/sources-internal_logs"]
sources-internal_metrics = ["vector/sources-internal_metrics"]
sources-journald = ["vector/sources-journald"]
sources-kafka = ["vector/sources-kafka"]
sources-kubernetes_logs = ["vector/sources-kubernetes_logs"]
sources-logstash = ["vector/sources-logstash"]
sources-mongodb_metrics = ["vector/sources-mongodb_metrics"]
sources-nats = ["vector/sources-nats"]
sources-nginx_metrics = ["vector/sources-nginx_metrics"]
sources-opentelemetry = ["vector/sources-opentelemetry"]
sources-postgresql_metrics = ["vector/sources-postgresql_metrics"]
sources-prometheus = ["vector/sources-prometheus"]
sources-redis = ["vector/sources-redis"]
sources-socket = ["vector/sources-socket"]
sources-splunk_hec = ["vector/sources-splunk_hec"]
sources-statsd = ["vector/sources-statsd"]
sources-stdin = ["vector/sources-stdin"]
sources-syslog = ["vector/sources-syslog"]
sources-utils-http = ["vector/sources-utils-http"]
sources-utils-http-auth = ["vector/sources-utils-http-auth"]
sources-utils-http-encoding = ["vector/sources-utils-http-encoding"]
sources-utils-http-error = ["vector/sources-utils-http-error"]
sources-utils-http-prelude = ["vector/sources-utils-http-prelude"]
sources-utils-http-query = ["vector/sources-utils-http-query"]
sources-utils-tcp-keepalive = ["vector/sources-utils-tcp-keepalive"]
sources-utils-tcp-socket = ["vector/sources-utils-tcp-socket"]
sources-utils-tls = ["vector/sources-utils-tls"]
sources-utils-udp = ["vector/sources-utils-udp"]
sources-utils-unix = ["vector/sources-utils-unix"]
sources-vector = ["vector/sources-vector"]
transforms = ["vector/transforms"]
transforms-logs = ["vector/transforms-logs"]
transforms-metrics = ["vector/transforms-metrics"]
transforms-aggregate = ["vector/transforms-aggregate"]
transforms-aws_ec2_metadata = ["vector/transforms-aws_ec2_metadata"]
transforms-dedupe = ["vector/transforms-dedupe"]
transforms-filter = ["vector/transforms-filter"]
transforms-geoip = ["vector/transforms-geoip"]
transforms-log_to_metric = ["vector/transforms-log_to_metric"]
transforms-lua = ["vector/transforms-lua"]
transforms-metric_to_log = ["vector/transforms-metric_to_log"]
transforms-pipelines = ["vector/transforms-pipelines"]
transforms-reduce = ["vector/transforms-reduce"]
transforms-remap = ["vector/transforms-remap"]
transforms-route = ["vector/transforms-route"]
transforms-sample = ["vector/transforms-sample"]
transforms-tag_cardinality_limit = ["vector/transforms-tag_cardinality_limit"]
transforms-throttle = ["vector/transforms-throttle"]
sinks = ["vector/sinks"]
sinks-logs = ["vector/sinks-logs"]
sinks-metrics = ["vector/sinks-metrics"]
sinks-aws_cloudwatch_logs = ["vector/sinks-aws_cloudwatch_logs"]
sinks-aws_cloudwatch_metrics = ["vector/sinks-aws_cloudwatch_metrics"]
sinks-aws_kinesis_firehose = ["vector/sinks-aws_kinesis_firehose"]
sinks-aws_kinesis_streams = ["vector/sinks-aws_kinesis_streams"]
sinks-aws_s3 = ["vector/sinks-aws_s3"]
sinks-aws_sqs = ["vector/sinks-aws_sqs"]
sinks-axiom = ["vector/sinks-axiom"]
sinks-azure_blob = ["vector/sinks-azure_blob"]
sinks-azure_monitor_logs = ["vector/sinks-azure_monitor_logs"]
sinks-blackhole = ["vector/sinks-blackhole"]
sinks-chronicle = ["vector/sinks-chronicle"]
sinks-clickhouse = ["vector/sinks-clickhouse"]
sinks-console = ["vector/sinks-console"]
sinks-datadog_archives = ["vector/sinks-datadog_archives"]
sinks-datadog_events = ["vector/sinks-datadog_events"]
sinks-datadog_logs = ["vector/sinks-datadog_logs"]
sinks-datadog_metrics = ["vector/sinks-datadog_metrics"]
sinks-datadog_traces = ["vector/sinks-datadog_traces"]
sinks-elasticsearch = ["vector/sinks-elasticsearch"]
sinks-file = ["vector/sinks-file"]
sinks-gcp = ["vector/sinks-gcp"]
sinks-honeycomb = ["vector/sinks-honeycomb"]
sinks-http = ["vector/sinks-http"]
sinks-humio = ["vector/sinks-humio"]
sinks-influxdb = ["vector/sinks-influxdb"]
sinks-kafka = ["vector/sinks-kafka"]
sinks-logdna = ["vector/sinks-logdna"]
sinks-loki = ["vector/sinks-loki"]
sinks-nats = ["vector/sinks-nats"]
sinks-new_relic_logs = ["vector/sinks-new_relic_logs"]
sinks-new_relic = ["vector/sinks-new_relic"]
sinks-papertrail = ["vector/sinks-papertrail"]
sinks-prometheus = ["vector/sinks-prometheus"]
sinks-pulsar = ["vector/sinks-pulsar"]
sinks-redis = ["vector/sinks-redis"]
sinks-sematext = ["vector/sinks-sematext"]
sinks-socket = ["vector/sinks-socket"]
sinks-splunk_hec = ["vector/sinks-splunk_hec"]
sinks-statsd = ["vector/sinks-statsd"]
sinks-utils-udp = ["vector/sinks-utils-udp"]
sinks-vector = ["vector/sinks-vector"]
sinks-websocket = ["vector/sinks-websocket"]
enterprise = ["vector/enterprise"]
nightly = ["vector/nightly"]
all-integration-tests = ["vector/all-integration-tests"]
aws-integration-tests = ["vector/aws-integration-tests"]
azure-integration-tests = ["vector/azure-integration-tests"]
aws-cloudwatch-logs-integration-tests = ["vector/aws-cloudwatch-logs-integration-tests"]
aws-cloudwatch-metrics-integration-tests = ["vector/aws-cloudwatch-metrics-integration-tests"]
aws-ec2-metadata-integration-tests = ["vector/aws-ec2-metadata-integration-tests"]
aws-ecs-metrics-integration-tests = ["vector/aws-ecs-metrics-integration-tests"]
aws-kinesis-firehose-integration-tests = ["vector/aws-kinesis-firehose-integration-tests"]
aws-kinesis-streams-integration-tests = ["vector/aws-kinesis-streams-integration-tests"]
aws-s3-integration-tests = ["vector/aws-s3-integration-tests"]
aws-sqs-integration-tests = ["vector/aws-sqs-integration-tests"]
axiom-integration-tests = ["vector/axiom-integration-tests"]
azure-blob-integration-tests = ["vector/azure-blob-integration-tests"]
chronicle-integration-tests = ["vector/chronicle-integration-tests"]
clickhouse-integration-tests = ["vector/clickhouse-integration-tests"]
datadog-agent-integration-tests = ["vector/datadog-agent-integration-tests"]
datadog-logs-integration-tests = ["vector/datadog-logs-integration-tests"]
datadog-metrics-integration-tests = ["vector/datadog-metrics-integration-tests"]
datadog-traces-integration-tests = ["vector/datadog-traces-integration-tests"]
docker-logs-integration-tests = ["vector/docker-logs-integration-tests"]
es-integration-tests = ["vector/es-integration-tests"]
eventstoredb_metrics-integration-tests = ["vector/eventstoredb_metrics-integration-tests"]
fluent-integration-tests = ["vector/fluent-integration-tests"]
gcp-cloud-storage-integration-tests = ["vector/gcp-cloud-storage-integration-tests"]
gcp-integration-tests = ["vector/gcp-integration-tests"]
gcp-pubsub-integration-tests = ["vector/gcp-pubsub-integration-tests"]
humio-integration-tests = ["vector/humio-integration-tests"]
influxdb-integration-tests = ["vector/influxdb-integration-tests"]
kafka-integration-tests = ["vector/kafka-integration-tests"]
logstash-integration-tests = ["vector/logstash-integration-tests"]
loki-integration-tests = ["vector/loki-integration-tests"]
mongodb_metrics-integration-tests = ["vector/mongodb_metrics-integration-tests"]
nats-integration-tests = ["vector/nats-integration-tests"]
nginx-integration-tests = ["vector/nginx-integration-tests"]
postgresql_metrics-integration-tests = ["vector/postgresql_metrics-integration-tests"]
prometheus-integration-tests = ["vector/prometheus-integration-tests"]
pulsar-integration-tests = ["vector/pulsar-integration-tests"]
redis-integration-tests = ["vector/redis-integration-tests"]
splunk-integration-tests = ["vector/splunk-integration-tests"]
dnstap-integration-tests = ["vector/dnstap-integration-tests"]
disable-resolv-conf = ["vector/disable-resolv-conf"]
shutdown-tests = ["vector/shutdown-tests"]
cli-tests = ["vector/cli-tests"]
vector-api-tests = ["vector/vector-api-tests"]
vector-unit-test-tests = ["vector/vector-unit-test-tests"]
enterprise-tests = ["vector/enterprise-tests"]
benches = ["vector/benches"]
dnstap-benches = ["vector/dnstap-benches"]
language-benches = ["vector/language-benches"]
statistic-benches = ["vector/statistic-benches"]
metrics-benches = ["vector/metrics-benches"]
remap-benches = ["vector/remap-benches"]
transform-benches = ["vector/transform-benches"]
codecs-benches = ["vector/codecs-benches"]
loki-benches = ["vector/loki-benches"]
enrichment-tables-benches = ["vector/enrichment-tables-benches"]

[dependencies]
vector = { path = "../..", default-features = false }

# Extensions
topsql = { path = "../../extensions/topsql" }
vm-import = { path = "../../extensions/vm_import" }
