[package]
name = "topsql"
version = "0.0.1"
edition = "2021"

[dependencies]
vector = { path = "../..", default-features = false }
vector_core = { path = "../../lib/vector-core", default-features = false, features = ["vrl", "test"] }
vector_common = { path = "../../lib/vector-common" }

prost-types = { version = "0.10.1", default-features = false }
tonic = { version = "0.7.2", default-features = false, features = ["transport", "codegen", "prost", "tls", "tls-roots", "compression"] }
hex = { version = "0.4.3", default-features = false }
etcd-client = { version = "0.9", features = ["tls-roots"] }

inventory = { version = "0.3.0", default-features = false }
snafu = { version = "0.7.1", default-features = false, features = ["futures"] }
hyper = { version = "0.14.20", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
http = { version = "0.2.8", default-features = false }
toml = { version = "0.5.9", default-features = false }
prost = { version = "0.10.4", default-features = false, features = ["std"] }
tokio = { version = "1.20.0", default-features = false, features = ["full"] }
serde_json = { version = "1.0.82", default-features = false, features = ["raw_value"] }
async-trait = { version = "0.1.56", default-features = false }
tracing = { version = "0.1.34", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, features = ["futures-03"] }
tokio-openssl = { version = "0.6.3", default-features = false }
async-recursion = "1.0.0"
typetag = { version = "0.2.1", default-features = false }
futures = { version = "0.3.21", default-features = false, features = ["compat", "io-compat"], package = "futures" }
tokio-stream = { version = "0.1.9", default-features = false, features = ["net", "sync", "time"] }
ordered-float = { version = "3.0.0", default-features = false }
chrono = { version = "0.4.19", default-features = false, features = ["serde"] }
bytes = { version = "1.2.0", default-features = false, features = ["serde"] }

[build-dependencies]
prost-build = { version = "0.10.4", default-features = false }
tonic-build = { version = "0.7", default-features = false, features = ["transport", "prost", "compression"] }
