[package]
name = "vm-import"
version = "0.0.1"
edition = "2021"

[dependencies]
vector = { path = "../..", default-features = false }
vector_core = { path = "../../lib/vector-core", default-features = false, features = ["vrl", "test"] }

bytes = { version = "1.2.0", default-features = false, features = ["serde"] }
flate2 = { version = "1.0.24", default-features = false, features = ["default"] }
futures-util = { version = "0.3.21", default-features = false }
http = { version = "0.2.8", default-features = false }
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.82", default-features = false, features = ["raw_value"] }
inventory = { version = "0.3.0", default-features = false }
tracing = { version = "0.1.34", default-features = false }
async-trait = { version = "0.1.56", default-features = false }
toml = { version = "0.5.9", default-features = false }
typetag = { version = "0.2.1", default-features = false }
hyper = { version = "0.14.20", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
